--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/HUGO.386"]
 	path = themes/HUGO.386
 	url = https://github.com/internot-blog/HUGO.386
+[submodule "themes/hugo.386"]
+	path = themes/hugo.386
+	url = https://github.com/internot-blog/HUGO.386
