--- a/hugo.toml
+++ b/hugo.toml
@@ -2,7 +2,7 @@ baseURL = "https://internot.blog"
 title = "internot.blog"
 languageCode = "en"
 DefaultContentLanguage = "en"     # Change this to change the site's language
-theme = "hugo.386"
+theme = "HUGO.386"
 preserveTaxonomyNames = true
 
 [params]
