--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo.386"]
-	path = themes/hugo.386
+[submodule "themes/HUGO.386"]
+	path = themes/HUGO.386
 	url = https://github.com/internot-blog/HUGO.386
